Name changes
Removed the GET request to get name and replaced it to be inside the listSessions.
